--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1 align="center"> Каталог товаров </h1>
 
             <center>
-            <a href="../magazin.local/catalog/computers/computers.html"><img align="center" src="../magazin.local/image/catalog/%D0%B1%D0%BB%D0%BE%D0%BA%20%D1%81%D0%BF%D0%B5%D1%80%D0%B5%D0%B4%D0%B8.jpg" alt="Компьютер IRU Game 315" width="100" height="200"> <b> Компьютер IRU Game 315</b></a>
+            <a href="https://frakiec2013.github.io/maggelanmag//catalog/computers/computers.html"><img align="center" src="https://frakiec2013.github.io/maggelanmag//image/catalog/%D0%B1%D0%BB%D0%BE%D0%BA%20%D1%81%D0%BF%D0%B5%D1%80%D0%B5%D0%B4%D0%B8.jpg" alt="Компьютер IRU Game 315" width="100" height="200"> <b> Компьютер IRU Game 315</b></a>
 
-            <a href="../magazin.local/catalog/monitors/monitors.html"><img align="center" src="../magazin.local/image/catalog/Acer%2021.5%20Aopen%2022MX1Qbii.jpg" alt="Acer 21.5 Aopen 22MX1Qbii" width="150" height="100"> <b>Монитор Acer&nbsp;21.5 Aopen 22MX1Qbii</b></a>
+            <a href="https://frakiec2013.github.io/maggelanmag//catalog/monitors/monitors.html"><img align="center" src="https://frakiec2013.github.io/maggelanmag//image/catalog/Acer%2021.5%20Aopen%2022MX1Qbii.jpg" alt="Acer 21.5 Aopen 22MX1Qbii" width="150" height="100"> <b>Монитор Acer&nbsp;21.5 Aopen 22MX1Qbii</b></a>
             </center>
 
        <hr>
