--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
         <hr>
         <footer>
             <b>Все права защищены &copy;2022</b>
-            <a href="https://frakiec2013.github.io/maggelanmag//index.html"> &laquo;Перейти на Главную старницу&raquo;</a> <br>
+            <a href="https://frakiec2013.github.io/maggelanmag/index.html"> &laquo;Перейти на Главную старницу&raquo;</a> <br>
         </footer>
     </body>
 </html>
