--- a/catalog/computers/computers.html
+++ b/catalog/computers/computers.html
@@ -10,9 +10,9 @@
         <h2 align="center">Компьютер IRU Game 315</h2>
         <hr>
         <center>
-            <a href="../../image/catalog/блок спереди.jpg" target="_blank"><img  src="../../image/catalog/блок спереди.jpg" alt="блок спереди" width="200" height="300"></a>
-            <a href="../../image/catalog/блок слева.jpg" target="_blank"><img src="../../image/catalog/блок слева.jpg" alt="блок слева" width="200" height="300"></a>
-            <a href="../../image/catalog/блок сверху.jpg" target="_blank"><img src="../../image/catalog/блок сверху.jpg" alt="блок сверху" width="200" height="300"></a>
+            <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/блок спереди.jpg" target="_blank"><img  src="https://frakiec2013.github.io/maggelanmag/image/catalog/блок спереди.jpg" alt="блок спереди" width="200" height="300"></a>
+            <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/блок слева.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/блок слева.jpg" alt="блок слева" width="200" height="300"></a>
+            <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/блок сверху.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/блок сверху.jpg" alt="блок сверху" width="200" height="300"></a>
         </center>
         <h3>Краткое описание товара</h3>
             <p>
@@ -83,7 +83,7 @@
         <hr>
         <footer>
             <b>Все права защищены &copy;&nbsp;2022</b>
-            <a href="../../index.html"> &laquo;Перейти на Главную старницу&raquo; </a> <br>
+            <a href="https://frakiec2013.github.io/maggelanmag/index.html"> &laquo;Перейти на Главную старницу&raquo; </a> <br>
         </footer>
     </body>
 </html>
