--- a/catalog/monitors/monitors.html
+++ b/catalog/monitors/monitors.html
@@ -11,11 +11,11 @@
             <h2 align="center"> Монитор Acer&nbsp;21.5&Prime; Aopen 22MX1Qbii TN&nbsp;1920&times;1080 75Hz 200cd/m2 16:9 (UM.WM1EE.001) </h2>
         <hr>
            <center>
-                <a href="../../image/catalog/Acer 21.5 Aopen 22MX1Qbii.jpg" target="_blank"><img src="../../image/catalog/Acer 21.5 Aopen 22MX1Qbii.jpg" alt="Acer 21.5 Aopen 22MX1Qbii" width="200" height="150"></a>
-                <a href="../../image/catalog/вид слева.jpg" target="_blank"><img src="../../image/catalog/вид слева.jpg" alt="вид слева" width="200" height="150"></a>
-                <a href="../../image/catalog/вид справа.jpg" target="_blank"><img src="../../image/catalog/вид справа.jpg" alt="вид справа" width="200" height="150"></a>
-                <a href="../../image/catalog/задний вид.jpg" target="_blank"><img src="../../image/catalog/задний вид.jpg" alt="задний вид" width="200" height="150"></a>
-                <a href="../../image/catalog/с боку.jpg" target="_blank"><img src="../../image/catalog/с боку.jpg" alt="с боку" width="200" height="150"></a>
+                <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/Acer 21.5 Aopen 22MX1Qbii.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/Acer 21.5 Aopen 22MX1Qbii.jpg" alt="Acer 21.5 Aopen 22MX1Qbii" width="200" height="150"></a>
+                <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/вид слева.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/вид слева.jpg" alt="вид слева" width="200" height="150"></a>
+                <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/вид справа.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/вид справа.jpg" alt="вид справа" width="200" height="150"></a>
+                <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/задний вид.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/задний вид.jpg" alt="задний вид" width="200" height="150"></a>
+                <a href="https://frakiec2013.github.io/maggelanmag/image/catalog/с боку.jpg" target="_blank"><img src="https://frakiec2013.github.io/maggelanmag/image/catalog/с боку.jpg" alt="с боку" width="200" height="150"></a>
            </center>
         <h3>Основные характеристики товара</h3>
         <p>
@@ -69,7 +69,7 @@
         <hr>
         <footer>
             <b>Все права защищены &copy;&nbsp;2022</b>
-            <a href="../../index.html"> &laquo;Перейти на Главную старницу&raquo;</a> <br>
+            <a href="https://frakiec2013.github.io/maggelanmag/index.html"> &laquo;Перейти на Главную старницу&raquo;</a> <br>
         </footer>
     </body>
 </html>
